--- a/DJValeting/Views/Booking/Index.cshtml
+++ b/DJValeting/Views/Booking/Index.cshtml
@@ -11,13 +11,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form method="post" action="@Url.Action("Create", "Booking")" novalidate>
             <div class="form-group">
-                @Html.TextBoxFor(x => x.Name, new { @class="form-control" })
+                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(x => x.BookingDate, new {@class="form-control", Type = "Date" })
+                @Html.TextBoxFor(x => x.BookingDate, new { @class = "form-control", Type = "Date" })
             </div>
             <div class="form-group">
                 @Html.DropDownList("Flexibility",
@@ -35,9 +34,9 @@
             <div class="form-group">
                 @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            <button class="bttn bttn-primary bttn-submit ml-1" type="submit">
+                Save
+            </button>
         </form>
     </div>
 </div>
