--- a/DJValeting/Views/Booking/Index.cshtml
+++ b/DJValeting/Views/Booking/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DJValeting.Domain.Data.Enum;
-@model DJValeting.Models.BookingViewModel
+@model List<DJValeting.Models.BookingViewModel>;
 
 @{
     ViewData["Title"] = "View";
@@ -10,35 +10,13 @@
 <h4>BookingViewModel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form method="post" action="@Url.Action("Create", "Booking")" novalidate>
-            <div class="form-group">
-                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.TextBoxFor(x => x.BookingDate, new { @class = "form-control", Type = "Date" })
-            </div>
-            <div class="form-group">
-                @Html.DropDownList("Flexibility",
-                    Html.GetEnumSelectList<FlexibilityEnum>(),
-                    "Your Availability", new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.DropDownList("VehicleSize",
-                    Html.GetEnumSelectList<CarSizeEnum>(),
-                    "Vehicle Size", new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.TextBoxFor(x => x.ContactNumber, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
-            </div>
-            <button class="bttn bttn-primary bttn-submit ml-1" type="submit">
-                Save
-            </button>
-        </form>
-    </div>
+    @foreach(var item in Model)
+    {
+        <div class="col-md-4">
+            @item.Name
+            @item.BookingDate
+        </div>
+    }
 </div>
 
 <div>
