--- a/DJValeting/Views/Booking/Edit.cshtml
+++ b/DJValeting/Views/Booking/Edit.cshtml
@@ -17,7 +17,7 @@
                 @Html.ValidationMessageFor(x => x.Name)
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(x => x.BookingDate, new { @class = "form-control", type = "date" })
+                @Html.TextBoxFor(model => model.BookingDate, @"{0:yyyy\/MM\/dd}", new { @class = "datepicker" })
                 @Html.ValidationMessageFor(x => x.BookingDate)
             </div>
             <div class="form-group">
@@ -51,6 +51,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+<script>
+    $(document).ready(function () {
+        $('#BookingDate').datepicker();
+    })
+</script>
