--- a/DJValeting/Views/Booking/Create.cshtml
+++ b/DJValeting/Views/Booking/Create.cshtml
@@ -17,7 +17,7 @@
                 @Html.ValidationMessageFor(x => x.Name)
             </div>
             <div class="form-group">
-                @Html.TextBoxFor(x => x.BookingDate, new { @class = "form-control", type = "date" })
+                @Html.TextBoxFor(x => x.BookingDate, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.BookingDate)
             </div>
             <div class="form-group">
@@ -50,5 +50,13 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts {
+    <script>
+        $('document').ready(function () {
+            $('#BookingDate').datepicker({ dateFormat: 'dd/mm/yy' });
+        })
+    </script>
+}
 
 
